# RealtimeCollabEngine

./: .gitignore  CMakeLists.txt  CODE_OPTIMIZATION_GUIDE.md  DATABASE_COMPLETION_REPORT.md  Dockerfile  MODULE_COMPLETION_REPORT.md  NETWORK_COMPLETION_REPORT.md  OT_ALGORITHM_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  REFACTORING_REPORT.md  RealtimeCollabEngine_功能需求文档.md  RealtimeCollabEngine_开发周期文档.md  WEEK4_COMPLETION_REPORT.md  WEEK5_COMPLETION_REPORT.md  WEEK6_COMPLETION_REPORT.md  WEEK7_COMPLETION_REPORT.md  WEEK8_COMPLETION_REPORT.md  build.sh  config.json  config.production.json  docker-compose.yml  run.sh  test.sh  test_collab_engine.db-shm  test_collab_engine.db-wal  开发流程.md
database/: schema.sql
deploy/: collab-engine.service  deploy.sh
docs/: architecture.md  deployment-guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.ts  diff-engine.ts  main.ts  mock-server.ts  ot-engine.ts  protocol.ts  style.css  version-manager.ts  ws-client.ts
include/api/: Controllers.h
include/core/: ConflictResolver.h  DocumentState.h  OTAlgorithm.h  OfflineQueue.h  Operation.h  RecoveryManager.h  SnapshotManager.h  SyncManager.h
include/network/: HttpServer.h  MessageProtocol.h  Room.h  SessionManager.h  WebSocketServer.h
include/storage/: Database.h  DocumentDAO.h  OperationDAO.h
include/utils/: Config.h  LogRotator.h  Logger.h  Metrics.h
src/: main.cpp
src/api/: Controllers.cpp
src/core/: ConflictResolver.cpp  DocumentState.cpp  OTAlgorithm.cpp  OfflineQueue.cpp  Operation.cpp  RecoveryManager.cpp  SnapshotManager.cpp  SyncManager.cpp
src/network/: HttpServer.cpp  MessageProtocol.cpp  Room.cpp  SessionManager.cpp  WebSocketServer.cpp
src/storage/: Database.cpp  DocumentDAO.cpp  OperationDAO.cpp
src/utils/: Config.cpp  LogRotator.cpp  Logger.cpp  Metrics.cpp
tests/: websocket_test_client.py
tests/unit/: test_advanced_features.cpp  test_config.cpp  test_framework.h  test_logger.cpp  test_network.cpp  test_ot_algorithm.cpp  test_persistence_recovery.cpp  test_storage.cpp  test_sync_broadcast.cpp
web/: README.md  index.html  websocket-client.js
